//ALL REQUEST PROTOS SHOULD INCLUDE A MinimumUserProto AS optional that represents which client sent it/triggered it 
//DO NO START PROPERTY METHODS WITH THE WORDS NEW OR COPY

import "Item.proto";
import "MonsterStuff.proto";
import "SharedEnumConfig.proto";
import "User.proto";


package com.lvl6.proto;

option java_outer_classname = "RewardsProto";
//DO NOT USE ID AS THE NAME OF A PROPERTY IN ANY PROTO


//------------------------------------------------------------------------------------------

message RewardProto {
	optional int32 rewardId = 1;
	//id in one of the *_config tables
	optional int32 staticDataId = 2;
	
	optional RewardType typ = 3;
	optional int32 amt = 4;
	
	//NOTE: if RewardType is MONSTER, then amt is repurposed to:
	//amt = 0 means only one piece is given
	//amt > 0 means one monster with a lvl equal to 'amt' is given  
	
	// This outer reward proto just specifies quantity.
	// The inner reward specifies the actual reward.
	// Only used for monster because amt is used to specify level.
	optional RewardProto actualReward = 5;
	
	enum RewardType {
		NO_REWARD = 1;
		ITEM = 2;
		GEMS = 3;
		CASH = 4;
		OIL = 5;
		GACHA_CREDITS = 7;
		MONSTER = 6;
		//CLAN_GIFT = 8  [deprecated = true];
		//TANGO_GIFT = 9  [deprecated = true];
		
		REWARD = 100;
	}
	
}

//------------------------------------------------------------------------------------------
//there is no analog of this in the db/server
message UserRewardProto {
	repeated FullUserMonsterProto updatedOrNewMonsters = 1;
	repeated UserItemProto updatedUserItems = 2;
	optional int32 gems = 3; //amounts gained
	optional int32 cash = 4;
	optional int32 oil = 5;
	optional int32 gachaCredits = 6;
	repeated UserGiftProto gift = 7;
}

//------------------------------------------------------------------------------------------
//TODO: Deprecate, replaced with GiftProto
/*message ClanGiftProto {
	optional int32 clanGiftId = 1;
	optional string name = 2;
	optional int32 hoursUntilExpiration = 3;	
	optional string imageName = 4;
	optional Quality quality = 5 [deprecated = true];
}*/

//------------------------------------------------------------------------------------------

message GiftProto {
	optional int32 giftId = 1;
	optional string name = 2;
	optional int32 hoursUntilExpiration = 3;
	optional string imageName = 4;
	optional GiftType giftType = 5 [default = NO_GIFT];
	
	enum GiftType {
		NO_GIFT = 1;
		CLAN_GIFT = 2;
		TANGO_GIFT = 3;
	}
}

//------------------------------------------------------------------------------------------

message UserGiftProto {
    optional string ugUuid = 1;
    optional string receiverUserUuid = 2;
    optional MinimumUserProto gifterUser = 3;
    optional GiftProto gift = 4;
    optional int64 timeReceived = 5;
    optional RewardProto reward = 6;
    optional bool hasBeenCollected = 7;

    //not always set
    optional int32 minutesTillExpiration = 8; 

    //set or not set based on GiftType in gift
    optional UserTangoGiftProto tangoGift = 9;
    
}

message UserTangoGiftProto {
	optional string userGiftUuid = 1;
	optional string gifterTangoName = 2;
}

<<<<<<< HEAD:mobsters-protos/src/main/java/com/lvl6/proto/Reward.proto
//------------------------------------------------------------------------------------------
=======
//similar to ClanGiftProto
message TangoGiftProto {
    optional int32 tangoGiftId = 1;
    //name of the gift
    optional string name = 2;
    optional int32 hoursUntilExpiration = 3;
    optional string imageName = 4;
}

//------------------------------------------------------------------------------------------

>>>>>>> changing secret gifts to use rewards:src/main/java/com/lvl6/proto/Reward.proto
message UserSecretGiftProto {
	optional string uisgUuid = 1;
	optional string userUuid = 2;
	optional int32 secsTillCollection = 3;
<<<<<<< HEAD:mobsters-protos/src/main/java/com/lvl6/proto/Reward.proto
	optional RewardProto reward = 4;
=======
	optional int32 rewardId = 4;
>>>>>>> changing secret gifts to use rewards:src/main/java/com/lvl6/proto/Reward.proto
	optional int64 createTime = 5;
}
